<resources>
    <string name="app_name">My Application</string>
    <string name="square">Square</string>
    <string name="looooooong_description">looooooong_description</string>
    <string name="habit1">habit1</string>
    <string name="set_the_habit_period">Set the habit period:</string>
    <string name="set_the_habit_priority">Set the habit priority:</string>
    <string name="bad">bad</string>
    <string name="good">good</string>
    <string name="times_in">times in</string>
    <string name="times_in_">times_in_</string>
    <string name="time_s_in">" time(s) in "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_habits">My habits</string>
    <string name="about">About</string>
    <string name="habit_tracker_android_application_v01">Habit Tracker android application, v01</string>
    <string name="open_drawer" />
    <string name="close_drawer">close_drawer</string>
    <string name="try_it_now">try it now</string>
    <string name="day_s">day(s)</string>
    <string name="create">Create</string>
    <string name="delete">delete</string>
    <string name="sortDesc">New habits first</string>
    <string name="sortAsc">Old habits first</string>
    <string name="sortMsg">Sort by edit date</string>
    <string name="name">name</string>
    <string name="search">search</string>
    <string name="useravatar">userAvatar</string>
</resources>
