<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_habit_fragment"
    tools:context=".newHabit.NewHabitFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/commonTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="New habit"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/enterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter the habit title:"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Title"
            android:textSize="20sp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/enterDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter the habit description:"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:inputType="textLongMessage"
            android:hint="Description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/enterType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select the habit type:"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_margin="5dp"/>

        <RadioGroup
            android:id="@+id/habitType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:outlineSpotShadowColor="#5523E3"
            android:layout_margin="5dp">

            <RadioButton
                android:id="@+id/typeBadBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/good" />

            <RadioButton
                android:id="@+id/typeGoodBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bad" />

        </RadioGroup>

        <TextView
            android:id="@+id/enterPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_the_habit_priority"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_margin="5dp"/>

        <SeekBar
            android:id="@+id/habitPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/enterPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_the_habit_period"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/editTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:textSize="20sp"
                android:inputType="number"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/enterPeriodTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="times in"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <EditText
                android:id="@+id/editDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:textSize="20sp"
                android:inputType="number"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/enterPeriodDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_s"
                android:textSize="20sp"
                android:textStyle="italic"/>

        </LinearLayout>


        <Button
            android:id="@+id/button_create"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_shape"
            android:text="@string/create" />

        <Button
            android:id="@+id/button_delete"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_shape_dark"
            android:text="@string/delete"
            android:textColor="#FFFFFF" />



    </LinearLayout>
</ScrollView>

